[package]
name = "toPDF"
version = "0.0.1"
edition2024 = "2024"

[dependencies]
printpdf = "0.3"
lopdf = "0.26.0"
hex = "0.4"
tun = "0.6.1"
libc = "0.2"
pnet = "0.28"
clap = { version = "4.3.15", features = ["derive"] }
aes = { version = "0.9.0-pre.2" }
hmac = "0.12"
sha2 = "0.10"
base32 = "0.4"
time = "0.3"
rand = "0.8"

[[bin]]
name = "toPDF"
path = "toPDF.rs"
