[package]
name = "toPDF"
version = "0.0.1"
edition2024 = "2024"

[profile.dev]
target = "x86_64-pc-windows-gnu"


[profile.release]
target = "x86_64-pc-windows-gnu"


[dependencies]
printpdf = "0.3"
lopdf = "0.26.0"
hex = "0.4"
tun = "0.6.1"
libc = "0.2"
pnet = "0.28.0"
clap = { version = "4.3.15", features = ["derive"] }
aes = { version = "0.9.0-pre.2" }
hmac = "0.12"
sha2 = "0.10"
base32 = "0.4"
time = "0.3"
rand = "0.8"
ctrlc = "3.4.5"
hkdf = "0.12.3"
winapi = { version = "0.3.9", features = ["handleapi", "processthreadsapi", "winnt", "securitybaseapi"] }
advapi32-sys = "0.2"
nftnl-sys = { version = "0.6.1", features = ["nftnl-1-1-1"] }

[[bin]]
name = "toPDF"
path = "toPDF.rs"
